--- a/src/index.css
+++ b/src/index.css
@@ -34,16 +34,31 @@ img {
 .cartIcon {
   width: 70px;
 }
-
-.categoryButton:hover {
-  background-color: #fdeb6b;;
-}
-
-.categoryButtonSelected:hover {
+.categoryButtonSelecterd {
   background-color: green;
 }
+
+.categoryButton:hover {
+  background-color: #fdeb6b;
+}
+
 .categoryButton {
   cursor: pointer;
   margin: 5px;
   padding: 5px;
 }
+.icon {
+  width: 20px;
+}
+p, h1, h2, button {
+  font-family: 'Poppins', sans-serif;
+  font-size: 20px;
+}
+
+button {
+  background-color: #fdeb6b;
+  margin-top: 40px;
+  margin-left: 10px;
+}
+
+
